# lpm_packageTools

./: install.sh  lpm.py  pyproject.toml
lpm/: cli.py
lpm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
lpm/source/: animations.py  config.json  logic_conection.py  logic_local.py  upgrade.py
source/: animations.py  config.json  logic.py
source/logics/: func_install.py  func_list.py  func_remove.py  func_search.py  func_update.py  func_use.py
source/modules/: conections_core.py  controller.py  load_config.py
