[project]
name = "lpm"
version = "2.0.0"
description = "Administrador de paquetes privado"
authors = [{name = "NesAnTime"}]
requires-python = ">=3.10"

[project.scripts]
lpm = "lpm.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["lpm", "lpm.*"]

[tool.setuptools.package-data]
lpm = ["source/*.json", "source/*.py"]
